--- a/_posts/2020-03-20-2020-03-20-podman-kafka.md
+++ b/_posts/2020-03-20-2020-03-20-podman-kafka.md
@@ -3,7 +3,6 @@ layout: post
 published: false
 title: 2020-03-20-podman-kafka
 ---
-## A New Post
 ** clean-up containers
 ```bash
 bash << EOF
@@ -14,6 +13,7 @@ podman volume prune -f
 podman ps -a
 podman images -a
 podman volume ls
+EOF
 ```
    
 ** create podman zookeeper
@@ -94,3 +94,86 @@ podman run -d \
     rhscl/mysql-57-rhel7
 ```   
    
+** build a custom Kafka-connect Docker image   
+- create a Kafka-connect folder to hold the dockerfile and mysql driver
+```bash
+# create a Kafka-connect folder to hold the dockerfile and mysql driver
+mkdir kafka-connect
+cd kafka-connect
+#
+# create a dockerfile
+cat >> Dockerfile << EOF
+FROM confluentinc/cp-kafka-connect
+ARG JDBC_JAR_FILE=mysql-connector-java-8.0.18.jar
+ARG CON_PATH=/usr/share/java/kafka
+COPY ${JDBC_JAR_FILE} ${CON_PATH}/${JDBC_JAR_FILE}
+EOF
+#
+# get the latest mysql jdbc driver
+wget "http://search.maven.org/remotecontent?filepath=mysql/mysql-connector-java/8.0.19/mysql-connector-java-8.0.19.jar" -O mysql-connector-java-8.0.19.jar
+```   
+   
+- Build the custom kafka-connect image
+```bash
+cd /root/kafka-connect  ;\
+podman build -t swapanc/kafka-connect:latest . ;\
+podman image ls
+```   
+   
+- connect to the mysql container and configure database
+```bash
+podman exec -it quickstart-mysql bash
+```   
+```sql
+mysql -u confluent -p confluent
+CREATE DATABASE IF NOT EXISTS connect_test;
+USE connect_test;
+DROP TABLE IF EXISTS test;
+CREATE TABLE IF NOT EXISTS test (
+  id serial NOT NULL PRIMARY KEY,
+  name varchar(100),
+  email varchar(200),
+  department varchar(200),
+  modified timestamp default CURRENT_TIMESTAMP NOT NULL,
+  INDEX `modified_index` (`modified`)
+);
+INSERT INTO test (name, email, department) VALUES ('alice', 'alice@abc.com', 'engineering');
+INSERT INTO test (name, email, department) VALUES ('bob', 'bob@abc.com', 'sales');
+INSERT INTO test (name, email, department) VALUES ('bob', 'bob@abc.com', 'sales');
+INSERT INTO test (name, email, department) VALUES ('bob', 'bob@abc.com', 'sales');
+INSERT INTO test (name, email, department) VALUES ('bob', 'bob@abc.com', 'sales');
+INSERT INTO test (name, email, department) VALUES ('bob', 'bob@abc.com', 'sales');
+INSERT INTO test (name, email, department) VALUES ('bob', 'bob@abc.com', 'sales');
+INSERT INTO test (name, email, department) VALUES ('bob', 'bob@abc.com', 'sales');
+INSERT INTO test (name, email, department) VALUES ('bob', 'bob@abc.com', 'sales');
+INSERT INTO test (name, email, department) VALUES ('bob', 'bob@abc.com', 'sales');
+exit;
+```   
+   
+- start custom kafka connect connector
+```bash
+podman run -d \
+  --name=kafka-connect-avro \
+  --net=host \
+  -p 28083:28083 \
+  -e CONNECT_BOOTSTRAP_SERVERS=localhost:29092 \
+  -e CONNECT_REST_PORT=28083 \
+  -e CONNECT_GROUP_ID="quickstart-avro" \
+  -e CONNECT_CONFIG_STORAGE_TOPIC="quickstart-avro-config" \
+  -e CONNECT_OFFSET_STORAGE_TOPIC="quickstart-avro-offsets" \
+  -e CONNECT_STATUS_STORAGE_TOPIC="quickstart-avro-status" \
+  -e CONNECT_CONFIG_STORAGE_REPLICATION_FACTOR=1 \
+  -e CONNECT_OFFSET_STORAGE_REPLICATION_FACTOR=1 \
+  -e CONNECT_STATUS_STORAGE_REPLICATION_FACTOR=1 \
+  -e CONNECT_KEY_CONVERTER="io.confluent.connect.avro.AvroConverter" \
+  -e CONNECT_VALUE_CONVERTER="io.confluent.connect.avro.AvroConverter" \
+  -e CONNECT_KEY_CONVERTER_SCHEMA_REGISTRY_URL="http://localhost:8081" \
+  -e CONNECT_VALUE_CONVERTER_SCHEMA_REGISTRY_URL="http://localhost:8081" \
+  -e CONNECT_INTERNAL_KEY_CONVERTER="org.apache.kafka.connect.json.JsonConverter" \
+  -e CONNECT_INTERNAL_VALUE_CONVERTER="org.apache.kafka.connect.json.JsonConverter" \
+  -e CONNECT_REST_ADVERTISED_HOST_NAME="localhost" \
+  -e CONNECT_LOG4J_ROOT_LOGLEVEL=DEBUG \
+  -e CONNECT_PLUGIN_PATH=/usr/share/java,/etc/kafka-connect/jars \
+  -p 2803:2803 \
+  swapanc/kafka-connect
+```
