--- a/_posts/2020-03-20-2020-03-20-podman-kafka.md
+++ b/_posts/2020-03-20-2020-03-20-podman-kafka.md
@@ -1,10 +1,10 @@
 ---
 layout: post
 published: true
-title: 2020-03-20-podman-kafka
+title: Podman Kafka RHEL 8
 date: '2020-03-20'
 ---
-** clean-up containers
+### clean-up containers
 ```bash
 bash << EOF
 podman stop $(podman ps -a -q)
@@ -17,7 +17,7 @@ podman volume ls
 EOF
 ```
    
-** create podman zookeeper
+### create podman zookeeper
 ```bash
 podman run -d \
     --net=host \
@@ -27,7 +27,7 @@ podman run -d \
     confluentinc/cp-zookeeper:5.3.1-1
 ```   
    
-** create kafka broker 
+### create kafka broker 
 ```bash
 podman run -d \
     --net=host \
@@ -39,7 +39,7 @@ podman run -d \
     confluentinc/cp-kafka:5.3.1-1
 ```   
    
-** create schema registry
+### create schema registry
 ```bash
 podman run -d \
   --net=host \
@@ -51,7 +51,7 @@ podman run -d \
   confluentinc/cp-schema-registry:5.3.1-1
 ```   
    
-** create topics
+### create topics
 ```bash
 podman run \
   --net=host \
@@ -74,7 +74,7 @@ podman run \
   kafka-topics --create --topic quickstart-avro-status --partitions 1 --replication-factor 1 --if-not-exists --zookeeper localhost:32181
 ```   
    
-** verify topic creation
+### verify topic creation
 ```bash
 podman run \
    --net=host \
@@ -83,7 +83,7 @@ podman run \
    kafka-topics --describe --zookeeper localhost:32181
 ```   
    
-** start mysql db container
+### start mysql db container
 ```bash
 podman run -d \
     --name quickstart-mysql \
@@ -95,7 +95,7 @@ podman run -d \
     rhscl/mysql-57-rhel7
 ```   
    
-** build a custom Kafka-connect Docker image   
+### build a custom Kafka-connect Docker image   
 - create a Kafka-connect folder to hold the dockerfile and mysql driver
 ```bash
 # create a Kafka-connect folder to hold the dockerfile and mysql driver
